feat(m1): complete MM-BE-01 and MM-FE-02 foundation wiring

--- a/src/MosaicMoney.Web/.env.example
+++ b/src/MosaicMoney.Web/.env.example
@@ -1,2 +1,5 @@
 # Public, non-sensitive values only.
 NEXT_PUBLIC_APP_NAME=Mosaic Money
+
+# Server-side API URL (used as fallback when Aspire orchestration is not running)
+API_URL=http://localhost:5000
