--- a/src/MosaicMoney.Api/MosaicMoney.Api.csproj
+++ b/src/MosaicMoney.Api/MosaicMoney.Api.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\MosaicMoney.ServiceDefaults\MosaicMoney.ServiceDefaults.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="13.3.0-preview.1.26121.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
