--- a/src/MosaicMoney.Worker/MosaicMoney.Worker.csproj
+++ b/src/MosaicMoney.Worker/MosaicMoney.Worker.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.Npgsql" Version="13.3.0-preview.1.26121.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.3" />
   </ItemGroup>
 
