feat(mvp): deliver review workflow and idempotent ingestion

--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "mosaicmoneydb": ""
   },
+  "AiWorkflow": {
+    "ConnectionName": "mosaicmoneydb",
+    "DirectConnectionString": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
