chore(plaid): add secret wiring and onboarding task contracts

--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -6,6 +6,14 @@
     "ConnectionName": "mosaicmoneydb",
     "DirectConnectionString": ""
   },
+  "Plaid": {
+    "Environment": "sandbox",
+    "ClientId": "",
+    "Secret": "",
+    "Products": [
+      "transactions"
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
