feat(m2): deliver plaid link lifecycle and web onboarding flow

--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -10,8 +10,12 @@
     "Environment": "sandbox",
     "ClientId": "",
     "Secret": "",
+    "RedirectUri": "",
     "Products": [
       "transactions"
+    ],
+    "CountryCodes": [
+      "US"
     ]
   },
   "Logging": {
