feat(mobile): implement MM-MOB-03/04 mobile workflow

--- a/src/MosaicMoney.Mobile/app.json
+++ b/src/MosaicMoney.Mobile/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "Mosaic Money Mobile",
     "slug": "mosaic-money-mobile",
+    "scheme": "mosaicmoney",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -15,16 +16,11 @@
     "ios": {
       "supportsTablet": true
     },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
-    },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
