feat(api): add embeddings queue and semantic-to-maf fallback pipeline

--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -4,7 +4,13 @@
   },
   "AiWorkflow": {
     "ConnectionName": "mosaicmoneydb",
-    "DirectConnectionString": ""
+    "DirectConnectionString": "",
+    "MafFallback": {
+      "Enabled": false,
+      "TimeoutSeconds": 8,
+      "MaxProposals": 3,
+      "MinimumProposalConfidence": 0.7000
+    }
   },
   "Plaid": {
     "Environment": "sandbox",
