--- a/src/MosaicMoney.Mobile/package.json
+++ b/src/MosaicMoney.Mobile/package.json
@@ -13,6 +13,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
     "expo": "55.0.0-preview.12",
     "expo-constants": "^18.0.13",
     "expo-linking": "^8.0.11",
@@ -20,6 +21,7 @@
     "expo-status-bar": "55.0.3",
     "react": "19.2.0",
     "react-native": "0.83.2",
+    "react-native-plaid-link-sdk": "12.8.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.24.0"
   },
