--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -16,13 +16,19 @@
     "Environment": "sandbox",
     "ClientId": "",
     "Secret": "",
+    "ClientName": "Mosaic Money",
+    "Language": "en",
     "RedirectUri": "",
+    "WebhookUrl": "",
     "Products": [
       "transactions"
     ],
     "CountryCodes": [
       "US"
-    ]
+    ],
+    "TransactionsSyncBootstrapCursor": "now",
+    "TransactionsSyncBootstrapCount": 1,
+    "UseDeterministicProvider": false
   },
   "Logging": {
     "LogLevel": {
