--- a/src/MosaicMoney.Mobile/package.json
+++ b/src/MosaicMoney.Mobile/package.json
@@ -10,7 +10,8 @@
     "start:localhost": "expo start --localhost",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test:sync-recovery": "vitest run src/features/transactions/offline/reviewMutationRecovery.test.ts"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -27,7 +28,8 @@
   },
   "devDependencies": {
     "@types/react": "~19.2.2",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "vitest": "^3.2.4"
   },
   "private": true
 }
