--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -5,6 +5,22 @@
   "AiWorkflow": {
     "ConnectionName": "mosaicmoneydb",
     "DirectConnectionString": "",
+    "Embeddings": {
+      "Provider": "deterministic",
+      "AzureOpenAI": {
+        "Endpoint": "",
+        "ApiKey": "",
+        "Deployment": "text-embedding-3-small",
+        "ApiVersion": "2024-10-21"
+      }
+    },
+    "Chat": {
+      "AzureOpenAI": {
+        "Endpoint": "",
+        "ApiKey": "",
+        "Deployment": "gpt-4.1-mini"
+      }
+    },
     "MafFallback": {
       "Enabled": false,
       "TimeoutSeconds": 8,
@@ -26,8 +42,8 @@
     "CountryCodes": [
       "US"
     ],
-    "TransactionsSyncBootstrapCursor": "now",
-    "TransactionsSyncBootstrapCount": 1,
+    "TransactionsSyncBootstrapCursor": "start",
+    "TransactionsSyncBootstrapCount": 250,
     "UseDeterministicProvider": false
   },
   "Logging": {
