--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -18,7 +18,7 @@
       "AzureOpenAI": {
         "Endpoint": "",
         "ApiKey": "",
-        "Deployment": "gpt-4.1-mini"
+        "Deployment": "gpt-5.2"
       }
     },
     "MafFallback": {
