Add initial web build files for Mosaic Money Mobile
- Create index.html for the web app with basic structure and styles.
- Add favicon.ico for the web app.
- Include metadata.json for bundler configuration.
- Set up metro.config.js to customize Metro bundler for monorepo support.
- Add generated JavaScript bundle for the web app.

--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -46,6 +46,9 @@
     "TransactionsSyncBootstrapCount": 250,
     "UseDeterministicProvider": false
   },
+  "Cors": {
+    "AllowedOrigins": []
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
