--- a/src/MosaicMoney.Api/appsettings.Development.json
+++ b/src/MosaicMoney.Api/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:8081",
+      "http://localhost:8082",
+      "http://localhost:8083"
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
