--- a/src/MosaicMoney.Mobile/package.json
+++ b/src/MosaicMoney.Mobile/package.json
@@ -16,16 +16,19 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
-    "expo": "55.0.0-preview.12",
-    "expo-constants": "^18.0.13",
-    "expo-linking": "^8.0.11",
-    "expo-router": "^6.0.23",
-    "expo-status-bar": "55.0.3",
+    "expo": "~55.0.0",
+    "expo-constants": "~55.0.7",
+    "expo-font": "~55.0.4",
+    "expo-linking": "~55.0.7",
+    "expo-router": "~55.0.0",
+    "expo-status-bar": "~55.0.4",
     "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-native": "0.83.2",
     "react-native-plaid-link-sdk": "12.8.0",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.24.0"
+    "react-native-screens": "^4.24.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@types/react": "~19.2.2",
