feat(plaid): request 24-month history during transaction init

--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -44,6 +44,7 @@
     ],
     "TransactionsSyncBootstrapCursor": "start",
     "TransactionsSyncBootstrapCount": 250,
+    "TransactionsHistoryDaysRequested": 730,
     "UseDeterministicProvider": false
   },
   "Cors": {
