feat(m5,m7,m2): advance onboarding, access parity, and release gates

--- a/src/MosaicMoney.Mobile/.env.example
+++ b/src/MosaicMoney.Mobile/.env.example
@@ -2,3 +2,7 @@
 # For physical phone testing, use a host reachable by your phone (for example LAN IP).
 # Do not place secrets in EXPO_PUBLIC_* values.
 EXPO_PUBLIC_API_BASE_URL=http://192.168.1.100:5001
+
+# Optional non-secret member context for local/CI API calls that require identity mapping.
+# Must be an active HouseholdUsers.Id GUID when set.
+EXPO_PUBLIC_MOSAIC_HOUSEHOLD_USER_ID=
