--- a/src/MosaicMoney.Web/.env.example
+++ b/src/MosaicMoney.Web/.env.example
@@ -3,3 +3,7 @@ NEXT_PUBLIC_APP_NAME=Mosaic Money
 
 # Server-side API URL (used as fallback when Aspire orchestration is not running)
 API_URL=http://localhost:5000
+
+# Optional non-secret member context for local/CI API calls that require identity mapping.
+# Must be an active HouseholdUsers.Id GUID when set.
+MOSAIC_HOUSEHOLD_USER_ID=
