--- a/src/MosaicMoney.Web/package.json
+++ b/src/MosaicMoney.Web/package.json
@@ -15,9 +15,10 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "lucide-react": "^0.575.0",
-    "next": "16.0.1",
+    "next": "16.1.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-plaid-link": "^4.1.1",
     "recharts": "^3.7.0",
     "tailwind-merge": "^3.5.0"
   },
