chore(checkpoint): snapshot in-progress auth and parity updates

--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -47,6 +47,13 @@
     "TransactionsHistoryDaysRequested": 730,
     "UseDeterministicProvider": false
   },
+  "Authentication": {
+    "Clerk": {
+      "Issuer": "",
+      "SecretKey": "",
+      "Audience": ""
+    }
+  },
   "Cors": {
     "AllowedOrigins": []
   },
