--- a/src/MosaicMoney.Mobile/.env.example
+++ b/src/MosaicMoney.Mobile/.env.example
@@ -3,6 +3,10 @@
 # Do not place secrets in EXPO_PUBLIC_* values.
 EXPO_PUBLIC_API_BASE_URL=http://192.168.1.100:5001
 
+# Clerk publishable key for Expo authentication flows.
+# This value is public by design; do not place private Clerk keys in EXPO_PUBLIC_* values.
+EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=
+
 # Optional non-secret member context for local/CI API calls that require identity mapping.
 # Must be an active HouseholdUsers.Id GUID when set.
 EXPO_PUBLIC_MOSAIC_HOUSEHOLD_USER_ID=
