--- a/src/MosaicMoney.Web/.env.example
+++ b/src/MosaicMoney.Web/.env.example
@@ -1,6 +1,14 @@
 # Public, non-sensitive values only.
 NEXT_PUBLIC_APP_NAME=Mosaic Money
 
+# Clerk public key used by browser authentication flows.
+# Safe to expose publicly, but keep real values in local untracked env files for standalone runs.
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+
+# Clerk server-side key for backend SDK access in Next.js server boundaries.
+# Never expose this value in NEXT_PUBLIC_* variables.
+CLERK_SECRET_KEY=
+
 # Server-side API URL (used as fallback when Aspire orchestration is not running)
 API_URL=http://localhost:5000
 
