--- a/src/MosaicMoney.Mobile/package.json
+++ b/src/MosaicMoney.Mobile/package.json
@@ -15,13 +15,16 @@
     "test:review-projection": "vitest run src/features/transactions/offline/reviewProjectionWorkflow.integration.test.ts"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.19.27",
     "@react-native-async-storage/async-storage": "2.2.0",
     "expo": "~55.0.0",
     "expo-constants": "~55.0.7",
     "expo-font": "~55.0.4",
     "expo-linking": "~55.0.7",
     "expo-router": "~55.0.0",
+    "expo-secure-store": "^55.0.8",
     "expo-status-bar": "~55.0.4",
+    "expo-web-browser": "^55.0.9",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-native": "0.83.2",
