--- a/src/MosaicMoney.Web/package.json
+++ b/src/MosaicMoney.Web/package.json
@@ -13,6 +13,7 @@
     "test:e2e:install": "playwright install chromium"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.38.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
