--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fontsource/jetbrains-mono": "^5.2.8",
     "@fontsource/outfit": "^5.2.8",
     "@fontsource/plus-jakarta-sans": "^5.2.8",
-    "recharts": "^3.7.0"
+    "apexcharts": "^5.6.0",
+    "react-apexcharts": "^2.0.1"
   }
 }
