--- a/src/MosaicMoney.Mobile/package.json
+++ b/src/MosaicMoney.Mobile/package.json
@@ -17,21 +17,25 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.19.27",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "expo": "~55.0.0",
+    "@shopify/react-native-skia": "2.4.18",
+    "expo": "~55.0.3",
     "expo-constants": "~55.0.7",
     "expo-font": "~55.0.4",
     "expo-linking": "~55.0.7",
-    "expo-router": "~55.0.0",
+    "expo-router": "~55.0.2",
     "expo-secure-store": "^55.0.8",
     "expo-status-bar": "~55.0.4",
     "expo-web-browser": "^55.0.9",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-native": "0.83.2",
+    "react-native-gesture-handler": "~2.30.0",
     "react-native-plaid-link-sdk": "12.8.0",
+    "react-native-reanimated": "4.2.1",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.24.0",
-    "react-native-web": "^0.21.0"
+    "react-native-screens": "~4.23.0",
+    "react-native-web": "^0.21.0",
+    "victory-native": "^41.20.2"
   },
   "devDependencies": {
     "@types/react": "~19.2.2",
