--- a/src/MosaicMoney.Web/package.json
+++ b/src/MosaicMoney.Web/package.json
@@ -14,13 +14,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.38.2",
+    "apexcharts": "^5.6.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "react": "19.2.3",
+    "react-apexcharts": "^2.0.1",
     "react-dom": "19.2.3",
     "react-plaid-link": "^4.1.1",
-    "recharts": "^3.7.0",
     "tailwind-merge": "^3.5.0"
   },
   "devDependencies": {
