feat(runtime): complete m10 closeout and sync project governance

--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -28,6 +28,14 @@
       "MinimumProposalConfidence": 0.7000
     }
   },
+  "RuntimeMessaging": {
+    "Enabled": false,
+    "EventGrid": {
+      "PublishEndpoint": "",
+      "PublishAccessKey": "",
+      "TopicName": ""
+    }
+  },
   "Plaid": {
     "Environment": "sandbox",
     "ClientId": "",
