--- a/src/MosaicMoney.Api/MosaicMoney.Api.csproj
+++ b/src/MosaicMoney.Api/MosaicMoney.Api.csproj
@@ -5,6 +5,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="13.3.0-preview.1.26126.7" />
+    <PackageReference Include="Aspire.Azure.Messaging.ServiceBus" Version="13.3.0-preview.1.26126.7" />
     <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="13.3.0-preview.1.26121.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.3">
