--- a/src/MosaicMoney.Worker/appsettings.json
+++ b/src/MosaicMoney.Worker/appsettings.json
@@ -6,6 +6,14 @@
     "ConnectionName": "mosaicmoneydb",
     "DirectConnectionString": ""
   },
+  "RuntimeMessaging": {
+    "Enabled": false,
+    "EventGrid": {
+      "PublishEndpoint": "",
+      "PublishAccessKey": "",
+      "TopicName": ""
+    }
+  },
   "Plaid": {
     "Environment": "sandbox",
     "ClientId": "",
