feat(taxonomy): add bootstrap seed and deterministic backfill

--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -65,6 +65,11 @@
   "Cors": {
     "AllowedOrigins": []
   },
+  "TaxonomyBackfill": {
+    "Enabled": true,
+    "DeterministicConfidenceThreshold": 0.7,
+    "MaxTransactionsPerRun": 10000
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
