feat(api): add operator-gated platform taxonomy lane
Implement AP0-OPS-01 by enabling platform taxonomy CRUD only when both operator API key and allowlisted auth subject are present, while preserving fail-closed defaults and lifecycle audit trail behavior.

Sync AP0-OPS-01 to In Review in specs and board script, document operator secret contracts, and include research notes under docs/MX and docs/Mastercard Connect for future account-ingestion planning.

--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -62,6 +62,10 @@
       "Audience": ""
     }
   },
+  "TaxonomyOperator": {
+    "ApiKey": "",
+    "AllowedAuthSubjectsCsv": ""
+  },
   "Cors": {
     "AllowedOrigins": []
   },
