feat(ai): add taxonomy readiness gates for ingestion and classification
Implement AP0-AI-01 readiness checks with configurable subcategory coverage and expense fill-rate thresholds.

Wire deterministic classification and Plaid ingestion to fail closed with explicit readiness reason codes when thresholds are unmet.

Add focused tests for orchestrator, ingestion, and readiness service behavior; sync AP0-AI-01 to In Review in specs and project board script.

Refs #150

--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -74,6 +74,14 @@
     "DeterministicConfidenceThreshold": 0.7,
     "MaxTransactionsPerRun": 10000
   },
+  "TaxonomyReadiness": {
+    "EnableClassificationGate": true,
+    "EnableIngestionGate": true,
+    "MinimumPlatformSubcategoryCount": 1,
+    "MinimumTotalSubcategoryCount": 3,
+    "MinimumExpenseSampleCount": 20,
+    "MinimumExpenseFillRate": 0.7
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
