--- a/src/MosaicMoney.Web/package.json
+++ b/src/MosaicMoney.Web/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.38.2",
+    "@clerk/themes": "^2.4.57",
     "apexcharts": "^5.6.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.575.0",
