feat: Implement Global Agent Panel for assistant interactions
- Added GlobalAgentPanel component for managing assistant conversations and approvals.
- Integrated conversation ID management with local storage.
- Implemented message sending and approval decision handling.
- Enhanced UI with conversation and timeline tabs, including error handling and loading states.
- Updated Shell component to use GlobalAgentPanel instead of GlobalAssistantPanel.

chore: Update Worker project references and configurations

- Added references for FoundryAgentOptions and FoundryAgentRuntimeService in Worker project.
- Configured Foundry agent options in Program.cs and added HTTP client for runtime service.
- Modified Worker class to handle assistant message and approval commands, including new execution logic.
- Updated appsettings.json to include Foundry agent configuration parameters.
- Enhanced error handling and telemetry for command execution results.

--- a/src/MosaicMoney.Api/MosaicMoney.Api.csproj
+++ b/src/MosaicMoney.Api/MosaicMoney.Api.csproj
@@ -13,6 +13,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="ModelContextProtocol.AspNetCore" Version="1.0.0" />
+    <PackageReference Include="OpenAI" Version="2.9.0" />
     <PackageReference Include="Pgvector.EntityFrameworkCore" Version="0.3.0" />
   </ItemGroup>
 
