--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -18,7 +18,32 @@
       "AzureOpenAI": {
         "Endpoint": "",
         "ApiKey": "",
-        "Deployment": "gpt-5.2"
+        "Deployment": "gpt-5.3-codex"
+      }
+    },
+    "Classification": {
+      "Foundry": {
+        "Enabled": false,
+        "Endpoint": "",
+        "ApiKey": "",
+        "Deployment": "gpt-5.3-codex",
+        "AgentName": "mosaic-money-classifier",
+        "ReasoningEffort": "low",
+        "MinimumConfidenceForAutoAssign": 0.8
+      }
+    },
+    "Agent": {
+      "Foundry": {
+        "Enabled": false,
+        "Endpoint": "",
+        "ApiKey": "",
+        "Deployment": "gpt-5.3-codex",
+        "AgentName": "Mosaic",
+        "SystemPrompt": "You are Mosaic, the Mosaic Money Foundry agent. Preserve single-entry ledger semantics, keep UserNote and AgentNote separate, and require human approval for high-impact actions.",
+        "McpDatabaseToolName": "mosaic-postgres",
+        "McpDatabaseToolEndpoint": "",
+        "KnowledgeSourceUrl": "",
+        "ApiVersion": "2025-05-01"
       }
     },
     "MafFallback": {
