--- a/src/MosaicMoney.Worker/appsettings.json
+++ b/src/MosaicMoney.Worker/appsettings.json
@@ -4,7 +4,21 @@
   },
   "AiWorkflow": {
     "ConnectionName": "mosaicmoneydb",
-    "DirectConnectionString": ""
+    "DirectConnectionString": "",
+    "Agent": {
+      "Foundry": {
+        "Enabled": false,
+        "Endpoint": "",
+        "ApiKey": "",
+        "Deployment": "gpt-5.3-codex",
+        "AgentName": "Mosaic",
+        "SystemPrompt": "You are Mosaic, the Mosaic Money Foundry agent. Preserve single-entry ledger semantics, keep UserNote and AgentNote separate, and require human approval for high-impact actions.",
+        "McpDatabaseToolName": "mosaic-postgres",
+        "McpDatabaseToolEndpoint": "",
+        "KnowledgeSourceUrl": "",
+        "ApiVersion": "2025-05-01"
+      }
+    }
   },
   "RuntimeMessaging": {
     "Enabled": false,
