feat: implement agent prompt recovery and messaging system
- Add agentPromptRecovery module to handle replaying queued agent prompts with success and error handling.
- Create tests for agent prompt recovery functionality to ensure reliability.
- Introduce useAgentPromptRecovery hook for managing recovery intervals and app state.
- Develop mobileAgentApi service for posting messages and handling approvals.
- Implement GlobalAgentPanel component for user interaction with the agent, including message sending and approval handling.
- Add appsettings.json for configuration of foundry classification and agent settings.

--- a/src/MosaicMoney.Mobile/package.json
+++ b/src/MosaicMoney.Mobile/package.json
@@ -11,7 +11,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "typecheck": "tsc --noEmit",
-    "test:assistant-queue": "vitest run src/features/assistant/offline/assistantPromptQueue.test.ts src/features/assistant/offline/assistantPromptRecovery.test.ts",
+    "test:agent-queue": "vitest run src/features/agent/offline/agentPromptQueue.test.ts src/features/agent/offline/agentPromptRecovery.test.ts",
     "test:sync-recovery": "vitest run src/features/transactions/offline/reviewMutationRecovery.test.ts",
     "test:review-projection": "vitest run src/features/transactions/offline/reviewProjectionWorkflow.integration.test.ts"
   },
