feat: add assistant chat route and implement message streaming
- Introduced a new API route for handling assistant chat interactions.
- Implemented message streaming with support for user messages and assistant responses.
- Added functionality to handle approval-required actions and provide feedback on processing status.
- Created utility functions for message extraction, run status checking, and response building.

test: add end-to-end tests for assistant panel functionality

- Implemented tests to verify assistant response streaming in the global panel.
- Added tests for handling approval-required actions and ensuring proper approval flow.

--- a/src/MosaicMoney.Worker/appsettings.json
+++ b/src/MosaicMoney.Worker/appsettings.json
@@ -15,8 +15,21 @@
         "SystemPrompt": "You are Mosaic, the Mosaic Money Foundry agent. Preserve single-entry ledger semantics, keep UserNote and AgentNote separate, and require human approval for high-impact actions.",
         "McpDatabaseToolName": "mosaic-postgres",
         "McpDatabaseToolEndpoint": "",
+        "McpDatabaseToolProjectConnectionId": "",
+        "McpDatabaseAllowedToolsCsv": "",
+        "McpDatabaseRequireApproval": "never",
+        "McpApiToolName": "mosaic-api",
+        "McpApiToolEndpoint": "",
+        "McpApiToolProjectConnectionId": "",
+        "McpApiAllowedToolsCsv": "",
+        "McpApiRequireApproval": "always",
+        "KnowledgeBaseMcpServerLabel": "knowledge-base",
+        "KnowledgeBaseMcpEndpoint": "",
+        "KnowledgeBaseProjectConnectionId": "",
+        "KnowledgeBaseAllowedToolsCsv": "knowledge_base_retrieve",
+        "KnowledgeBaseRequireApproval": "never",
         "KnowledgeSourceUrl": "",
-        "ApiVersion": "2025-05-01"
+        "ApiVersion": "2025-11-01-preview"
       }
     }
   },
