--- a/src/MosaicMoney.Web/package.json
+++ b/src/MosaicMoney.Web/package.json
@@ -13,8 +13,10 @@
     "test:e2e:install": "playwright install chromium"
   },
   "dependencies": {
+    "@ai-sdk/react": "^3.0.107",
     "@clerk/nextjs": "^6.38.2",
     "@clerk/themes": "^2.4.57",
+    "ai": "^6.0.105",
     "apexcharts": "^5.6.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.575.0",
