--- a/src/MosaicMoney.Worker/MosaicMoney.Worker.csproj
+++ b/src/MosaicMoney.Worker/MosaicMoney.Worker.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="13.3.0-preview.1.26126.7" />
     <PackageReference Include="Aspire.Azure.Messaging.ServiceBus" Version="13.3.0-preview.1.26126.7" />
     <PackageReference Include="Aspire.Npgsql" Version="13.3.0-preview.1.26121.1" />
+    <PackageReference Include="Azure.Identity" Version="1.17.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.3" />
   </ItemGroup>
 
@@ -19,7 +20,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="..\MosaicMoney.Api\Domain\Assistant\FoundryAgentOptions.cs" Link="Domain\Assistant\FoundryAgentOptions.cs" />
-    <Compile Include="..\MosaicMoney.Api\Domain\Assistant\FoundryAgentRuntimeService.cs" Link="Domain\Assistant\FoundryAgentRuntimeService.cs" />
+    <Compile Include="..\MosaicMoney.Api\Domain\Assistant\FoundryAgentRuntimeService.cs" Link="Domain\Agent\FoundryAgentRuntimeService.cs" />
   </ItemGroup>
 </Project>
