Add Playwright script for live agent panel testing and E2E tests
- Implemented a new script `triage-live-agent-panel.mjs` to automate sign-in and interaction with the live agent panel using Playwright.
- The script captures screenshots and logs responses for different partners, handling errors and summarizing results.
- Created a new test file `agent-panel.spec.js` for end-to-end testing of the agent panel functionality, including response streaming and approval workflows.

--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -56,7 +56,7 @@
         "KnowledgeBaseAllowedToolsCsv": "knowledge_base_retrieve",
         "KnowledgeBaseRequireApproval": "never",
         "KnowledgeSourceUrl": "",
-        "ApiVersion": "2025-11-01-preview"
+        "ApiVersion": "v1"
       }
     },
     "MafFallback": {
