--- a/src/MosaicMoney.Worker/appsettings.json
+++ b/src/MosaicMoney.Worker/appsettings.json
@@ -29,7 +29,7 @@
         "KnowledgeBaseAllowedToolsCsv": "knowledge_base_retrieve",
         "KnowledgeBaseRequireApproval": "never",
         "KnowledgeSourceUrl": "",
-        "ApiVersion": "2025-11-01-preview"
+        "ApiVersion": "v1"
       }
     }
   },
