--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -97,7 +97,8 @@
     "Clerk": {
       "Issuer": "",
       "SecretKey": "",
-      "Audience": ""
+      "Audience": "",
+      "AuthProvider": "clerk"
     }
   },
   "TaxonomyOperator": {
