Add migration for AgentReusablePrompts table with constraints and indexes
- Created the AgentReusablePrompts table with fields for Id, Title, PromptText, StableKey, Scope, HouseholdId, HouseholdUserId, IsFavorite, DisplayOrder, UsageCount, LastUsedAtUtc, IsArchived, ArchivedAtUtc, CreatedAtUtc, and LastModifiedAtUtc.
- Added various check constraints to enforce data integrity.
- Established foreign key relationships with HouseholdUsers and Households tables.
- Created multiple indexes to optimize query performance based on common search patterns.

--- a/src/MosaicMoney.Api/MosaicMoney.Api.csproj
+++ b/src/MosaicMoney.Api/MosaicMoney.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
     <ProjectReference Include="..\MosaicMoney.ServiceDefaults\MosaicMoney.ServiceDefaults.csproj" />
@@ -25,6 +25,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>32a1a00e-c861-483a-baba-fc62b01e9212</UserSecretsId>
   </PropertyGroup>
 
 </Project>
