--- a/src/MosaicMoney.Api/appsettings.json
+++ b/src/MosaicMoney.Api/appsettings.json
@@ -21,6 +21,17 @@
         "Deployment": "gpt-5.3-codex"
       }
     },
+    "PromptGeneration": {
+      "ModelRouter": {
+        "Enabled": true,
+        "Endpoint": "",
+        "Deployment": "model-router",
+        "UseDefaultAzureCredential": true,
+        "AzureAiScope": "https://cognitiveservices.azure.com/.default",
+        "ApiKey": "",
+        "Temperature": 0.35
+      }
+    },
     "Classification": {
       "Foundry": {
         "Enabled": false,
